--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
+  file_picker: ^5.3.1
+  syncfusion_flutter_pdfviewer: ^21.2.5
+  flutter_tts: ^3.6.3
+  permission_handler: ^10.2.0
+  syncfusion_flutter_pdf: ^21.2.10
 
 dev_dependencies:
   flutter_test:
